--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-toasted": "^1.1.27",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
