--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vue-toasted": "^1.1.27",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-toast": "^0.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
