--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "core-js": "^3.3.2",
     "dotenv": "^8.2.0",
     "vue": "^2.6.10",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.1.3",
+    "vue-tiny-slider": "^0.1.39",
     "vue-toasted": "^1.1.27",
     "vuex": "^3.0.1",
     "vuex-toast": "^0.1.3"
